--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "@craco/craco": "^7.1.0",
+    "@reduxjs/toolkit": "^2.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,15 +13,20 @@
     "@types/node": "^16.18.113",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "antd": "^5.21.4",
+    "axios": "^1.7.7",
     "craco-less": "^2.1.0-alpha.0",
     "eslint-config": "^0.3.0",
     "eslint-plugin-prettier": "^5.2.1",
     "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.13",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -51,10 +58,15 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
+    "@types/nprogress": "^0.2.3",
+    "@types/styled-components": "^5.1.34",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.37.1",
     "globals": "^15.11.0",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
+    "styled-component": "^2.8.0",
     "typescript-eslint": "^8.9.0"
   }
 }
